<resources>
    <string name="app_name">Starship Delivery</string>
    <string name="create_new_ship">Create Your Spaceship</string>
    <string name="give_a_name">Give a name to your ship</string>
    <string name="empty_name_error">You should give a name to your ship!</string>
    <string name="durability">Durability: %1$s </string>
    <string name="speed">Speed: %1$s</string>
    <string name="material_capacity">Material Capacity: %1$s</string>
    <string name="spaceship_points">Total available points: %1$s</string>
    <string name="continue_button">Continue</string>
    <string name="remaining_points_error">You should spend remaining points!</string>
    <string name="error_occurred">An error occurred. Please try again.</string>
    <string name="stations">Stations</string>
    <string name="favourites">Favourites</string>
    <string name="travel">Start Travel</string>
    <string name="search_station">Search Station</string>
    <string name="empty_favourite_list">You don\'t have any stations yet</string>
    <string name="capacity">Capacity</string>
    <string name="stock">Stock</string>
    <string name="need">Need</string>
    <string name="distance_to_earth">Distance to Earth %1$s</string>
</resources>